# Research-Battery-Lora

./: .gitignore  NGEN-AI-2026-research-discovery.md  NGEN-AI-2026-research-ideas.md  NGEN-AI-2026-tool-drift-research-plan.md  battery-aware-adaptive-rank-fedlora-research-plan.md  research-plan-battery-aware-fedlora.md  tool-drift-handoff.md  tool-drift-stage2-results.md
battery-lora/: .gitignore  EXPERIMENT_LOG.md  RESEARCH_DIRECTIONS.md  battery_simulator.py  client.py  config.py  data_utils.py  evaluate.py  flora_aggregation.py  model_utils.py  plot_results.py  pyproject.toml  quick_test.py  rank_policy.py  requirements.txt  run_all.py  run_experiment.ipynb  run_experiment.py  server.py
tool-drift/: .env.example  README.md  pyproject.toml
tool-drift/benchmarks/: __init__.py  bfcl_adapter.py  dice_adapter.py
tool-drift/configs/: bfcl_ablation_card_only.yaml  bfcl_ablation_validation_retry.yaml  bfcl_stage3_10_qwen9b_non_oracle_latency.yaml  bfcl_stage3_200_gpt4omini_non_oracle.yaml  bfcl_stage3_200_llama4scout.yaml  bfcl_stage3_200_llama4scout_non_oracle.yaml  bfcl_stage3_200_qwen35b_non_oracle.yaml  bfcl_stage3_200_qwen9b.yaml  bfcl_stage3_200_qwen9b_non_oracle.yaml  bfcl_stage3_200_qwen9b_reprompt_baseline.yaml  bfcl_stage3_50_qwen9b_non_oracle_latency.yaml  dice_ablation_all_combined.yaml  dice_ablation_all_combined_non_oracle.yaml  dice_ablation_candidates_only.yaml  dice_ablation_candidates_only_non_oracle.yaml  dice_ablation_card_only.yaml  (+17 more)
uq-edge/: .gitignore  config.py  data_utils.py  inference.py  metrics.py  model_utils.py  plotting.py  pyproject.toml  quick_test.py  research-plan.md  run_all.py  run_experiment.ipynb  uq_methods.py
(+195 files in other folders)
