[project]
name = "battery-lora"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.7.0",
    "flwr-datasets>=0.6.0",
    "flwr[simulation]>=1.27.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "peft>=0.18.1",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]
